--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-file-resizer": "^0.4.8",
-    "react-scripts": "5.0.1",
-    "react-slider": "^2.0.4",
-    "sass": "^1.55.0",
+    "react-scripts": "^5.0.1",
+    "react-slider": "^2.0.6",
+    "sass": "^1.63.6",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
